--- a/tripplanner/app/src/main/res/values/strings.xml
+++ b/tripplanner/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="gps_coordinate_lat_label">GPS(latitude)</string>
     <string name="image_url_label">https://awsome_picture.com/image</string>
     <string name="gps_coordinate_long_label">GPS(longitude)</string>
+    <string name="invalid_name">Invalid name</string>
+    <string name="invalid_site">Invalid website</string>
+    <string name="invalid_lat">Invalid latitude</string>
+    <string name="invalid_long">Invalid longitude</string>
+    <string name="form_success">Form submitted successfully!</string>
+    <string name="form_fail">Form validation failed!</string>
+    <string name="failed_save">Destination could not be saved this time!</string>
 </resources>
