--- a/tripplanner/app/src/main/res/values/strings.xml
+++ b/tripplanner/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="destination_name_hint">Destination Name</string>
     <string name="add_button_label">Save</string>
     <string name="gps_coordinate_lat_label">GPS(latitude)</string>
-    <string name="image_url_label">https://awsome_picture.com/image</string>
+    <string name="image_url_label">https://awsomepicture.com/image</string>
     <string name="gps_coordinate_long_label">GPS(longitude)</string>
     <string name="invalid_name">Invalid name</string>
     <string name="invalid_site">Invalid website</string>
@@ -17,4 +17,7 @@
     <string name="form_success">Form submitted successfully!</string>
     <string name="form_fail">Form validation failed!</string>
     <string name="failed_save">Destination could not be saved this time!</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="empty_list">Your list of destinations is currently empty. \n\n Add some destinations.</string>
+    <string name="error_msg">Your list of destinations could not be loaded this time. \n\n Contact, customer support!</string>
 </resources>
